--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.2.2",
+    "mongoose": "^7.2.3",
+    "node.js": "^0.0.1-security",
     "nodemon": "^2.0.22"
-  },
-  "devDependencies": {}
+  }
 }
