--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.2.4",
+    "morgan": "^1.10.0",
     "node.js": "^0.0.1-security",
     "nodemon": "^2.0.22"
   }
