updates for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 client/artists.html
 client/concerts.html
 client/venues.html
+
+# files #
+/Sad\ Dads\ Concert\ Tracker\ Wireframe.fig
+/Sad\ Dads\ Concert\ Tracker.jam
